Update API_URL to the correct render URL

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         // CONFIGURAÇÃO DE CONEXÃO
         // IMPORTANTE: Quando você subir o python no Render, ele vai te dar uma URL (ex: https://jarvis-backend.onrender.com)
         // Cole essa URL dentro das aspas abaixo.
-        const API_URL = "https://SUA-URL-DO-RENDER-AQUI.onrender.com"; 
+        const API_URL = "https://jarvis-ku8a.onrender.com"; 
 
         // Elementos do DOM
         const chatDisplay = document.getElementById('chat-display');
